// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`explorer has project root info 1`] = `

<div>
  <section class="flex h-full max-h-[calc(100svh-65px-16px)] w-full grow flex-col justify-between overflow-y-auto rounded-b-lg border-x-[1px] border-b-[1px]">
    <section class="absolute z-[20] flex w-[calc(100%-2px)] items-center bg-background px-8 pb-4 pt-1">
      <div class="flex w-full max-w-8xl flex-row items-center gap-2">
        <gui-root-button>
        </gui-root-button>
        <gui-query-bar
          tabindex="0"
          startcontent="[object Object]"
          endcontent="[object Object]"
        >
        </gui-query-bar>
      </div>
    </section>
    <div class="z-[10] pt-12">
      <gui-explorer-grid>
      </gui-explorer-grid>
    </div>
  </section>
</div>

`;

exports[`explorer not vlt installed 1`] = `

<div>
  <gui-setup-project>
  </gui-setup-project>
</div>

`;

exports[`render default 1`] = `

<div>
</div>

`;

exports[`render no results if search throws 1`] = `

<div>
  <section class="flex h-full max-h-[calc(100svh-65px-16px)] w-full grow flex-col justify-between overflow-y-auto rounded-b-lg border-x-[1px] border-b-[1px]">
    <section class="absolute z-[20] flex w-[calc(100%-2px)] items-center bg-background px-8 pb-4 pt-1">
      <div class="flex w-full max-w-8xl flex-row items-center gap-2">
        <gui-root-button>
        </gui-root-button>
        <gui-query-bar
          tabindex="0"
          startcontent="[object Object]"
          endcontent="[object Object]"
        >
        </gui-query-bar>
      </div>
    </section>
    <div class="z-[10] pt-12">
      <gui-explorer-grid>
      </gui-explorer-grid>
    </div>
  </section>
</div>

`;
